fix(css): should not wrap with double quote when the url rebase feature bailed out

--- a/playground/css/nested/_index.scss
+++ b/playground/css/nested/_index.scss
@@ -20,6 +20,13 @@ $var: '/ok.png';
   background-position: center;
 }
 
+$var-c1: '/ok';
+$var-c2: '.png';
+.sass-url-starts-with-variable-concat {
+  background: url($var-c1 + $var-c2);
+  background-position: center;
+}
+
 $var2: '/OK.PNG';
 .sass-url-starts-with-function-call {
   background: url(string.to-lower-case($var2));
